# secretsync

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  SECURITY_AUDIT.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
secretsync/: __init__.py  cli.py  config.py  differ.py  env_file.py  models.py
secretsync/backends/: __init__.py  base.py  parameter_store.py  secrets_manager.py
secretsync/formatters/: __init__.py  json_fmt.py  terminal.py
tasks/: todo.md
tests/: test_backends.py  test_cli.py  test_differ.py  test_env_file.py
