[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretsync"
version = "0.1.0"
description = "Bidirectional sync between local .env files and AWS Secrets Manager / Parameter Store"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
secretsync = "secretsync.cli:cli"

[project.optional-dependencies]
dev = [
    "cffi>=1.16",
    "cryptography>=42.0",
    "moto[secretsmanager,ssm]>=5.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["secretsync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=secretsync --cov-report=term-missing -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
